[gd_scene load_steps=2 format=3 uid="uid://hxxtqhybqcua"]

[ext_resource type="Script" uid="uid://dprsofu5dn5l2" path="res://scenes/map_info/map_info.gd" id="1_fwiyd"]

[node name="MapInfo" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fwiyd")
metadata/_tab_index = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MapSelectorList" type="Tree" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PosXLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Pos X:"

[node name="PosXLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="PosYLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Pos Y:"

[node name="PosYLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="BssidLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Bssid:"

[node name="BssidLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="EssidLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Essid:"

[node name="EssidLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="IpLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "IP:"

[node name="IpLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(172, 0)
layout_mode = 2

[node name="WebAddressLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Web Address:"

[node name="WebAddressLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="WebTypeLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Web Type:"

[node name="WebTypeLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(172, 0)
layout_mode = 2

[node name="OtherDetailLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="OtherDetailCodeEdit" type="CodeEdit" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
minimap_draw = true
gutters_draw_line_numbers = true
